online test link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <div class="main">
   <h1>BITS 2020</h1>
-  <h2>Online tests are now available !</h2>
+  <h2>Online tests are now available ! <a class="btn btn-info" href="https://acicts.github.io/BITS20/onlinetest.html" id="catocery">Visit Tests</a></h2>
   <p>The Task Based Online Intra-School ICT Competiton</p>
   <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSfyiQFQWdhvyFRMa-D1eAhWVCC6w_z0ycWBBOnq7MgBxDXsGw/viewform?fbzx=-310011898092864180" target="_blank">Register</a>
   <section class="icon-down">
